--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   <div class="container">
        <p><img src="images/myPhoto.png" style="float:right; margin-left: 40px;"/>Hello! I'm a Junior Frontend Developer. Recently I've finished programming bootcamp => <span>"JavaScript Developer: React"</span> on CodersLab school. However, HTML, CSS and the IT industry, I have been dealing with a few years. Working with designing, building from the very beginning + running and administration CMS-based websites such as Joomla or Wordpress.</p>
        <p>In my professional carreer I decided to go one step further, slipping into programming and Frontend. I started learning JavaScript and continue it on bootcamp. There I also knew and expanded my skills with React JS, I liked Ajax and Json, got to know how to simplify coding with JQuery, or shorten to write functions by ES6. And it's all about improving my work with Sass, Webpack or Gulp.</p>
-       <p>In programming I am rather a typical Frontender, I like to design and give the dynamics of application presentation, build something interesting and practical with the help of javaScript. In addition, I am excited about coding functional applications in React. In addition to efficient operation, I pay attention to everything properly presented, was useful in service and pleasing to the eye.</p>
+       <p>In programming I am rather a typical Frontender, I like to design and give the dynamics to application, build something interesting and practical with the help of javaScript. In addition, I am excited about coding functional applications in React. In addition to efficient operation, I pay attention to everything properly presented, was useful in service and pleasing to the eye.</p>
     </div>
     <a href="#pos2" id="scroll2"><div class="scrollDown"></div></a>
     
