--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
   <div class="container">
      <div class="motto shadow-drop-2-center">
      
-      <img src="images/HTML5.png"/><img src="images/CSS3.png"/><img src="images/SASS.png"/><img src="images/JS.png"/><img src="images/jQurery_white.png"><img src="images/react.png"/><img src="images/joomla.png"/><img src="images/wordpress.png"/><img src="images/json_white.png"><img src="images/webpack.png"/><img src="images/github.png"/>
+      <img src="images/HTML5.png"/><img src="images/CSS3.png"/><img src="images/SASS.png"/><img src="images/JS.png"/><img src="images/jQurery_white.png"><img src="images/react.png"/><img src="images/json_white.png"><img src="images/webpack.png"/><img src="images/github.png"/><img src="images/joomla.png"/><img src="images/wordpress.png"/><img src="images/ink.png"/><img src="images/gimp.png"/>
     </div>
     <a href="#pos3" id="scroll3"><div class="scrollDown"></div></a>
 	</div>
