--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
       				<h3 class="titlePortfolio">SitOnChair Workshop</h3>
       				<img src="images/SitOnChair.jpg"/>
       			 <div class="content-details fadeIn-top">
-        			<h3>Sit On Chair WorkShop</h3>
+        			<h3>Sit On Chair Bootcamp WorkShop</h3>
         			<p>HTML, CSS, JavaScript, RWD</p>
         			<a href="https://nephente1.github.io/Sit-On-Chair-One-Page/" target="_blank"><button>VISIT</button></a>
      			 </div>
@@ -201,8 +201,8 @@
        </div>
 			
     </div>
-    <h3 class="titlePortfolio">...more, coming soon...</h3>
-    <h2 class="siteTitle">some of my works withs cms's as a webmaster and webdesigner</h2>
+    
+        <h3 class="titlePortfolio">some of my works withs cms's as a webmaster and webdesigner</h3>
 	<div class="container clearfix">
 		<a href="http://ecologika.pl/" target="blank"><img src="images/ecologika.jpg" class="cms"></a><a href="http://serce-sercu.pl/" target="blank"><img src="images/serce_sercu.jpg" class="cms"></a><a href="http://kmb-inwestycje.eu" target="blank"><img src="images/kmb.jpg" class="cms"></a><a href="http://poznajrosyjski.pl" target="blank"><img src="images/poznajrosyjski.jpg" class="cms"></a><a href="http://oslony-okienne.com.pl" target="blank"><img src="images/oslony-okienne.jpg" class="cms"></a>
 		
