--- a/index.html
+++ b/index.html
@@ -165,17 +165,15 @@
        <div class="col-three">
        		
        		<div class="content">
-<h3 class="next">Some of my next project</h3>
-<!--
+
       			<div class="content-overlay"></div>
-      			<h3 class="titlePortfolio">Some next project</h3>
-      				<img src="images/ReactApi.jpg">
+      				<h3 class="titlePortfolio">TO-DO <br>List</h3>
+      				<img src="images/todo_list.jpg">
       			 <div class="content-details fadeIn-top">
-        			<h3>2</h3>
-        			<p>?</p>
-        			<a href="/" target="_blank"><button>VISIT</button></a>
+        			<h3>TO DO List</h3>
+        			<p>Java Script, ES6</p>
+        			<a href="https://nephente1.github.io/TODO-list/" target="_blank"><button>VISIT</button></a>
      			 </div>
--->
   
   			</div>
        		
